fix: gap style

--- a/src/components/shared/Input/input.css
+++ b/src/components/shared/Input/input.css
@@ -1,6 +1,6 @@
 .input-container {
   display: grid;
-  gap: 2rem;
+  gap: 1rem;
   width: 100%;
 }
 .input-area {
